styled the main signin page

--- a/signin.html
+++ b/signin.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./styles/signin.css">
+        <link rel="stylesheet" href="./styles/main-signin.css">
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -16,7 +16,7 @@
         <div class="main">
             <div class="signin-box">
                 <div class="top-signin-box">
-                    <div>Google</div>
+                    <div><img src="./front-end//assets/GoogleLogo.png" alt=""></div>
                     <div class="sign-in">Sign in</div>
                     <p>Use your Google Account</p>
                 </div>
