implemented the structure of the secondary signin page(password)

--- a/signin-password.html
+++ b/signin-password.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./styles/main-signin.css">
+        <link rel="stylesheet" href="./styles/sginin-password.css">
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -13,26 +13,29 @@
         <title>Sign In</title>
     </head>
     <body>
-        <div class="main">
-            <div class="signin-box">
+        <div class="signin-password-main">
+            <div class="signin-box signin-password-box">
                 <div class="top-signin-box">
-                    <div><img src="./front-end//assets/GoogleLogo.png" alt="Google Logo"></div>
+                    <div><img src="./front-end/assets/GoogleLogo.png" alt="Google Logo"></div>
                     <div class="sign-in">Sign in</div>
-                    <p>Use your Google Account</p>
+                    <div>
+                        <div>
+                            <i class="fa-solid fa-user fa-xs"></i>
+                        </div>
+                        <p>storagepark.lb@gmail.com</p>
+                        <i class="fa-solid fa-caret-down"></i>
+                    </div>
                 </div>
                 <div class="bottom-signin-box">
                     <div>
-                        <input type="text" placeholder="Email or phone">
-                        <p class="forgot-password">Forgot email?</p>
-                    </div>
-                    <div>
-                        <p>Not your computer? Use Guest mode to sign in privately.</p>
-                        <div class="learn-more">
-                            <a href="">learn more</a>
+                        <input type="text" placeholder="Enter your password">
+                        <div class="show-password">
+                            <input id="show-password-input" type="checkbox">
+                            <label for="show-password-input">Show password</label>
                         </div>
                     </div>
                     <div>
-                        <div class="create-account">Create account</div>
+                        <div class="forgot-password">Forgot password?</div>
                         <div class="next-button">
                             <button>Next</button>
                         </div>
