--- a/classrooms.html
+++ b/classrooms.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./styles/index.css">
+        <link rel="stylesheet" href="./styles/classrooms.css">
         <link rel="stylesheet" href="./classrooms.html">
         <link
             rel="stylesheet"
@@ -16,7 +17,7 @@
     <body>
         <div class="navbar">
             <div class="left-navbar">
-                <div class="icon"><i class="fa-solid fa-bars"></i></div>
+                <div class="icon"><i class="fa-solid fa-bars fa-lg"></i></div>
                 <div class="logo">
                     <img src="./front-end/assets/GoogleLogo.png" alt="Google Logo">
                     <span>Classroom</span>
