--- a/classrooms.html
+++ b/classrooms.html
@@ -17,16 +17,38 @@
     <body>
         <div class="navbar">
             <div class="left-navbar">
-                <div class="icon"><i class="fa-solid fa-bars fa-lg"></i></div>
+                <div class="icon">
+                    <i class="fa-solid fa-bars fa-lg"></i>
+                </div>
                 <div class="logo">
                     <img src="./front-end/assets/GoogleLogo.png" alt="Google Logo">
                     <span>Classroom</span>
                 </div>
             </div>
             <div class="right-navbar">
-                <div class="plus-icon"><i class="fa-solid fa-plus fa-lg"></i></div>
-                <div class="google-apps-icon"><i class="fa-solid fa-border-none fa-lg"></i></div>
-                <div class="profile-pic"><img src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb" alt="profile picture"></div>
+                <div class="plus-icon">
+                    <i class="fa-solid fa-plus fa-lg"></i>
+                </div>
+                <div class="google-apps-icon">
+                    <i class="fa-solid fa-border-none fa-lg"></i>
+                </div>
+                <div class="profile-pic"><img
+                    src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
+                    alt="profile picture"></div>
+            </div>
+        </div>
+        <div class="arrow-icon">
+            <img src="./front-end/assets/arrow.svg" alt="arrow">
+            <div>
+                <p>Dont see your classes?<br>Try another account</p>
+            </div>
+        </div>
+        <div class="empty-space-section">
+            <img src="./front-end/assets/empty_states_home.svg" alt="books">
+            <p>Add a class to get started</p>
+            <div class="buttons">
+                <button>Create class</button>
+                <button>Join class</button>
             </div>
         </div>
     </body>
