Added axios script link in index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Classroom Clone</title>
   </head>
   <body>
+    <script src="front-end/axios.min.js"></script>
     <script src="front-end/script.js"></script>
     <script>
       pages.loadFor("index");
