Adjusted js file

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Classroom Clone</title>
   </head>
   <body>
-    <script src="front-end/axios.min.js"></script>
-    <script src="front-end/script.js"></script>
+    <script src="front-end/js/axios.min.js"></script>
+    <script src="front-end/js/script.js"></script>
     <script>
       pages.loadFor("index");
     </script>
