--- a/signin.html
+++ b/signin.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./styles/index.css">
-        <link rel="stylesheet" href="./styles/signin.css">
+        <link rel="stylesheet" href="./front-end/styles/index.css">
+        <link rel="stylesheet" href="./front-end/styles/signin.css">
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
