Added learn-more link

--- a/index.html
+++ b/index.html
@@ -3,63 +3,69 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./front-end/styles/index.css">
-    <link rel="stylesheet" href="./front-end/styles/signin.css">
+    <link rel="stylesheet" href="./front-end/styles/index.css" />
+    <link rel="stylesheet" href="./front-end/styles/signin.css" />
     <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-            integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"/>
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Classroom Clone</title>
   </head>
   <body>
     <div class="main">
-            <div class="signin-box">
-                <div class="top-signin-box">
-                    <div><img src="./front-end//assets/GoogleLogo.png" alt="Google Logo"></div>
-                    <div class="sign-in">Sign in</div>
-                    <p>Use your Google Account</p>
-                </div>
-                <div class="bottom-signin-box">
-                    <div class="inputs">
-                        <div>
-                            <input type="text" placeholder="Email or phone">
-                            <p class="forgot-password">Forgot email?</p>
-                        </div>
-                        <div>
-                            <input type="text" placeholder="Enter your password">
-                            <div class="show-password">
-                                <input id="show-password-input" type="checkbox">
-                                <label for="show-password-input">Show password</label>
-                            </div>
-                        </div>
-                    </div>
-                    <div>
-                        <p>Not your computer? Use Guest mode to sign in privately.</p>
-                        <div class="learn-more">
-                            <a href="">learn more</a>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="create-account">Create account</div>
-                        <div class="next-button">
-                            <button>Next</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="bottom-signin">
-                <div>English(United States)
-                    <i class="fa-solid fa-caret-down"></i>
-                </div>
-                <ul>
-                    <li>Help</li>
-                    <li>Privacy</li>
-                    <li>Terms</li>
-                </ul>
-            </div>
+      <div class="signin-box">
+        <div class="top-signin-box">
+          <div>
+            <img src="./front-end//assets/GoogleLogo.png" alt="Google Logo" />
+          </div>
+          <div class="sign-in">Sign in</div>
+          <p>Use your Google Account</p>
         </div>
+        <div class="bottom-signin-box">
+          <div class="inputs">
+            <div>
+              <input type="text" placeholder="Email or phone" />
+              <p class="forgot-password">Forgot email?</p>
+            </div>
+            <div>
+              <input type="text" placeholder="Enter your password" />
+              <div class="show-password">
+                <input id="show-password-input" type="checkbox" />
+                <label for="show-password-input">Show password</label>
+              </div>
+            </div>
+          </div>
+          <div>
+            <p>Not your computer? Use Guest mode to sign in privately.</p>
+            <div class="learn-more">
+              <a href="https://support.google.com/chrome/answer/6130773?hl=en"
+                >learn more</a
+              >
+            </div>
+          </div>
+          <div>
+            <div class="create-account">Create account</div>
+            <div class="next-button">
+              <button>Next</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="bottom-signin">
+        <div>
+          English(United States)
+          <i class="fa-solid fa-caret-down"></i>
+        </div>
+        <ul>
+          <li>Help</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+        </ul>
+      </div>
+    </div>
     <script src="front-end/js/axios.min.js"></script>
     <script src="front-end/js/script.js"></script>
     <script>
