--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
                 <div class="bottom-signin-box">
                     <div class="inputs">
                         <div>
-                            <input type="text" placeholder="Email or phone">
+                            <input id="email_in" type="email" placeholder="Email or phone">
                             <p class="forgot-password">Forgot email?</p>
                         </div>
                         <div>
-                            <input type="text" placeholder="Enter your password">
+                            <input id="password_in" type="password" placeholder="Enter your password">
                             <div class="show-password">
                                 <input id="show-password-input" type="checkbox">
                                 <label for="show-password-input">Show password</label>
@@ -44,7 +44,7 @@
                     <div>
                         <div class="create-account">Create account</div>
                         <div class="next-button">
-                            <button>Next</button>
+                            <button id="login">Log in</button>
                         </div>
                     </div>
                 </div>
