implemented the verifying page

--- a/forget-password.html
+++ b/forget-password.html
@@ -5,15 +5,25 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./front-end/styles/index.css">
         <link rel="stylesheet" href="./front-end/styles/signin.css">
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+            integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"/>
         <title>Sign in - Google Accounts</title>
     </head>
     <body>
-        <div class="main">
+        <div class="main forgot-password-page">
             <div class="signin-box">
                 <div class="top-signin-box">
                     <div><img src="./front-end/assets/GoogleLogo.png" alt="Google Logo"></div>
-                    <div class="sign-in">Sign in</div>
-                    <p>Use your Google Account</p>
+                    <div class="sign-in">Verify it's you</div>
+                    <div class="user-email">
+                        <i class="fa-solid fa-user"></i>
+                        mohammad.hussein377@gmail.com
+                        <i class="fa-solid fa-caret-down"></i>
+                    </div>
                 </div>
                 <div class="bottom-signin-box">
                     <div class="inputs">
@@ -27,19 +37,22 @@
                             <div>
                                 <label for="password">Password</label>
                             </div>
-                            <div><input id="password" placeholder="Enter your password" type="password"></div>
+                            <div><input id="password" placeholder="Enter your password" type="password" disabled></div>
                         </div>
                         <div class="column">
                             <div>
                                 <label for="confirm-password">Confirm Password</label>
                             </div>
-                            <div><input id="confirm-password" placeholder="Confirm your password" type="password"></div>
+                            <div><input id="confirm-password" placeholder="Confirm your password" type="password" disabled></div>
                         </div>
                     </div>
                     <div>
                         <!-- <div class="create-account">Check</div> -->
-                        <div class="next-button">
+                        <div class="check-button">
                             <button>Check</button>
+                        </div>
+                        <div class="login-button hide">
+                            <button>Login</button>
                         </div>
                     </div>
                 </div>
