implemented the structure of the sidebar

--- a/signup.html
+++ b/signup.html
@@ -19,7 +19,7 @@
             <div class="signup-box">
                 <div class="top-signup-box">
                     <div><img src="./front-end//assets/GoogleLogo.png" alt="Google Logo"></div>
-                    <div class="sign-up">Sign up</div>
+                    <div class="signup-heading">Sign up</div>
                     <p>Use your Google Account</p>
                 </div>
                 <div class="bottom-signup-box">
