--- a/classrooms.html
+++ b/classrooms.html
@@ -50,5 +50,54 @@
                 <button>Join class</button>
             </div>
         </div>
+        <div class="siderbar">
+            <div class="top-siderbar">
+                <div>
+                    <i class="fa-solid fa-house"></i>
+                    Classes
+                </div>
+                <div>
+                    <i class="fa-regular fa-calendar"></i>
+                    Calendar
+                </div>
+            </div>
+            <div class="middle-sidebar">
+                <p>Enrolled</p>
+                <div>
+                    <i class="fa-solid fa-table-list"></i>
+                    To-do
+                </div>
+                <div class="classes">
+                    <div class="class">
+                        <div>F</div>
+                        <div class="class-data">
+                            <div class="class-name">
+                                FSW 23&24 | Soft Skills
+                            </div>
+                            <p class="class-desc">Full Stack Web Development Bootcamp</p>
+                        </div>
+                    </div>
+                    <div class="class">
+                        <div>F</div>
+                        <div class="class-data">
+                            <div class="class-name">
+                                FSW 23&24 | Tech
+                            </div>
+                            <p class="class-desc">Full Stack Web Development Bootcamp</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="bottom-siderbar">
+                <div>
+                    <i class="fa-solid fa-folder"></i>
+                    Archived classes
+                </div>
+                <div>
+                    <i class="fa-solid fa-gear"></i>
+                    Settings
+                </div>
+            </div>
+        </div>
     </body>
 </html>
