--- a/forget-password.html
+++ b/forget-password.html
@@ -18,7 +18,7 @@
             <div class="signin-box">
                 <div class="top-signin-box">
                     <div><img src="./front-end/assets/GoogleLogo.png" alt="Google Logo"></div>
-                    <div class="sign-in">Verify it's you</div>
+                    <div class="verify-heading">Verify it's you</div>
                     <div class="user-email">
                         <i class="fa-solid fa-user"></i>
                         mohammad.hussein377@gmail.com
