--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="signin-box">
                 <div class="top-signin-box">
                     <div><img src="./front-end//assets/GoogleLogo.png" alt="Google Logo"></div>
-                    <div class="sign-in">Sign in</div>
+                    <div class="signin-heading">Sign in</div>
                     <p>Use your Google Account</p>
                 </div>
                 <div class="bottom-signin-box">
