adjusted signin and signup php files

--- a/forget-password.html
+++ b/forget-password.html
@@ -52,7 +52,7 @@
                             <button>Check</button>
                         </div>
                         <div class="login-button hide">
-                            <button>Login</button>
+                            <button>Change Password</button>
                         </div>
                     </div>
                 </div>
