--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                                 <label for="show-password-input">Show password</label>
                             </div>
                         </div>
+                        <p class="error"></p>
                     </div>
                     <div>
                         <p>Not your computer? Use Guest mode to sign in privately.</p>
