--- a/classrooms.html
+++ b/classrooms.html
@@ -31,7 +31,7 @@
                 <div class="google-apps-icon">
                     <i class="fa-solid fa-border-none fa-lg"></i>
                 </div>
-                <div class="profile-pic"><img
+                <div class="nav-profile-pic"><img
                     src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
                     alt="profile picture"></div>
             </div>
@@ -96,7 +96,145 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="class">
+                    <div class="top-class">
+                        <div class="class-title">
+                            <p>FSW 23&24 | Soft Skils</p>
+                            <div>
+                                <i class="fa-solid fa-ellipsis-vertical fa-lg"></i>
+                            </div>
+                        </div>
+                        <p>Full Stack Web Development Bootcamp</p>
+                        <p>Tech Department</p>
+                        <div class="profile-pic"><img
+                            src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
+                            alt="Profile Picture"></div>
+                    </div>
+                    <div class="assignments">
+                        <div class="assignment">
+                            <p class="due-date">Due today</p>
+                            <p>11:59PM - Professional Development Plan</p>
+                        </div>
+                        <div class="assignment">
+                            <p class="due-date">Due tomorrow</p>
+                            <p>11:59PM - Planners(Time Management)</p>
+                        </div>
+                    </div>
+                    <div class="bottom-class">
+                        <div class="user-icon">
+                            <i class="fa-regular fa-user fa-lg"></i>
+                        </div>
+                        <div class="folder-icon">
+                            <i class="fa-regular fa-folder fa-lg"></i>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="class">
+                    <div class="top-class">
+                        <div class="class-title">
+                            <p>FSW 23&24 | Soft Skils</p>
+                            <div>
+                                <i class="fa-solid fa-ellipsis-vertical fa-lg"></i>
+                            </div>
+                        </div>
+                        <p>Full Stack Web Development Bootcamp</p>
+                        <p>Tech Department</p>
+                        <div class="profile-pic"><img
+                            src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
+                            alt="Profile Picture"></div>
+                    </div>
+                    <div class="assignments">
+                        <div class="assignment">
+                            <p class="due-date">Due today</p>
+                            <p>11:59PM - Professional Development Plan</p>
+                        </div>
+                        <div class="assignment">
+                            <p class="due-date">Due tomorrow</p>
+                            <p>11:59PM - Planners(Time Management)</p>
+                        </div>
+                    </div>
+                    <div class="bottom-class">
+                        <div class="user-icon">
+                            <i class="fa-regular fa-user fa-lg"></i>
+                        </div>
+                        <div class="folder-icon">
+                            <i class="fa-regular fa-folder fa-lg"></i>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="class">
+                    <div class="top-class">
+                        <div class="class-title">
+                            <p>FSW 23&24 | Soft Skils</p>
+                            <div>
+                                <i class="fa-solid fa-ellipsis-vertical fa-lg"></i>
+                            </div>
+                        </div>
+                        <p>Full Stack Web Development Bootcamp</p>
+                        <p>Tech Department</p>
+                        <div class="profile-pic"><img
+                            src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
+                            alt="Profile Picture"></div>
+                    </div>
+                    <div class="assignments">
+                        <div class="assignment">
+                            <p class="due-date">Due today</p>
+                            <p>11:59PM - Professional Development Plan</p>
+                        </div>
+                        <div class="assignment">
+                            <p class="due-date">Due tomorrow</p>
+                            <p>11:59PM - Planners(Time Management)</p>
+                        </div>
+                    </div>
+                    <div class="bottom-class">
+                        <div class="user-icon">
+                            <i class="fa-regular fa-user fa-lg"></i>
+                        </div>
+                        <div class="folder-icon">
+                            <i class="fa-regular fa-folder fa-lg"></i>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="class">
+                    <div class="top-class">
+                        <div class="class-title">
+                            <p>FSW 23&24 | Soft Skils</p>
+                            <div>
+                                <i class="fa-solid fa-ellipsis-vertical fa-lg"></i>
+                            </div>
+                        </div>
+                        <p>Full Stack Web Development Bootcamp</p>
+                        <p>Tech Department</p>
+                        <div class="profile-pic"><img
+                            src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
+                            alt="Profile Picture"></div>
+                    </div>
+                    <div class="assignments">
+                        <div class="assignment">
+                            <p class="due-date">Due today</p>
+                            <p>11:59PM - Professional Development Plan</p>
+                        </div>
+                        <div class="assignment">
+                            <p class="due-date">Due tomorrow</p>
+                            <p>11:59PM - Planners(Time Management)</p>
+                        </div>
+                    </div>
+                    <div class="bottom-class">
+                        <div class="user-icon">
+                            <i class="fa-regular fa-user fa-lg"></i>
+                        </div>
+                        <div class="folder-icon">
+                            <i class="fa-regular fa-folder fa-lg"></i>
+                        </div>
+                    </div>
+                </div>
             </div>
+
+            
         </div>
         <!-- Sidebar -->
         <div id="sidebar" class="sidebar hide">
