--- a/forget_password.html
+++ b/forget_password.html
@@ -43,12 +43,16 @@
                             <div>
                                 <label for="confirm-password">Confirm Password</label>
                             </div>
-                            <div><input id="confirm-password" placeholder="Confirm your password" type="password" disabled></div>
+                            <div><input
+                                id="confirm-password"
+                                placeholder="Confirm your password"
+                                type="password"
+                                disabled></div>
                         </div>
                     </div>
                     <div>
                         <!-- <div class="create-account">Check</div> -->
-                        <div class="check-button">
+                        <div id="check-button" class="check-button">
                             <button>Check</button>
                         </div>
                         <div class="login-button hide">
@@ -68,5 +72,10 @@
                 </ul>
             </div>
         </div>
+        <script src="front-end/js/axios.min.js"></script>
+        <script src="front-end/js/script.js"></script>
+        <script>
+            pages.loadFor("forget_password")
+        </script>
     </body>
 </html>
