--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <div>
                         <p>Not your computer? Use Guest mode to sign in privately.</p>
                         <div class="learn-more">
-                            <a href="">learn more</a>
+                            <a href="./forget_password.html">learn more</a>
                         </div>
                     </div>
                     <div>
