--- a/forget-password.html
+++ b/forget-password.html
@@ -11,7 +11,7 @@
             integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
             crossorigin="anonymous"
             referrerpolicy="no-referrer"/>
-        <title>Sign in - Google Accounts</title>
+        <title>Forget Password - Google Accounts</title>
     </head>
     <body>
         <div class="main forgot-password-page">
