--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
             crossorigin="anonymous"
             referrerpolicy="no-referrer"/>
-        <title>Classroom Clone</title>
+        <title>Sign in</title>
     </head>
     <body>
         <div class="main">
