--- a/manage-account.html
+++ b/manage-account.html
@@ -32,7 +32,7 @@
                                     <label for="first-name">First Name</label>
                                 </div>
                                 <div>
-                                    <input id="first-name" placeholder="First Name" type="text" value="firstname-here"/>
+                                    <input id="first-name" placeholder="First Name" type="text"/>
                                 </div>
                             </div>
                             <div class="column">
@@ -40,7 +40,7 @@
                                     <label for="last-name">Last Name</label>
                                 </div>
                                 <div>
-                                    <input id="last-name" placeholder="Last Name" type="text" value="lastname-here"/>
+                                    <input id="last-name" placeholder="Last Name" type="text" />
                                 </div>
                             </div>
                         </div>
