--- a/classrooms.html
+++ b/classrooms.html
@@ -222,52 +222,7 @@
                     To-do
                 </div>
                 <div class="classes">
-                    <div class="class">
-                        <div>F</div>
-                        <div class="class-data">
-                            <p class="class-name">
-                                FSW 23&24 | Soft Skills
-                            </p>
-                            <p class="class-desc">Full Stack Web Development Bootcamp from here</p>
-                        </div>
-                    </div>
-                    <div class="class">
-                        <div>F</div>
-                        <div class="class-data">
-                            <div class="class-name">
-                                FSW 23&24 | Tech
-                            </div>
-                            <p class="class-desc">Full Stack Web Development Bootcamp</p>
-                        </div>
-                    </div>
-
-                    <div class="class">
-                        <div>F</div>
-                        <div class="class-data">
-                            <p class="class-name">
-                                FSW 23&24 | Soft Skills
-                            </p>
-                            <p class="class-desc">Full Stack Web Development Bootcamp from here</p>
-                        </div>
-                    </div>
-                    <div class="class">
-                        <div>F</div>
-                        <div class="class-data">
-                            <p class="class-name">
-                                FSW 23&24 | Soft Skills
-                            </p>
-                            <p class="class-desc">Full Stack Web Development Bootcamp from here</p>
-                        </div>
-                    </div>
-                    <div class="class">
-                        <div>F</div>
-                        <div class="class-data">
-                            <p class="class-name">
-                                FSW 23&24 | Soft Skills
-                            </p>
-                            <p class="class-desc">Full Stack Web Development Bootcamp from here</p>
-                        </div>
-                    </div>
+                    
                 </div>
             </div>
             <div class="bottom-sidebar">
@@ -281,6 +236,7 @@
                 </div>
             </div>
         </div>
+        <script src="front-end/js/axios.min.js"></script>
         <script src="front-end/js/script.js"></script>
         <script>
             pages.loadFor("classrooms");
