--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                     <div>
                         <p>Not your computer? Use Guest mode to sign in privately.</p>
                         <div class="learn-more">
-                            <a href="./forget_password.html">learn more</a>
+                            <a href="http://www.google.com/">learn more</a>
                         </div>
                     </div>
                     <div>
-                        <div class="create-account">Create account</div>
+                        <div class="create-account"><a href="signup.html">Create account</a></div>
                         <div class="next-button">
                             <button id="login">Log in</button>
                         </div>
