--- a/signup.html
+++ b/signup.html
@@ -88,7 +88,7 @@
             </div>
           </div>
           <div>
-            <div class="login-button">Login</div>
+            <div class="login-button"><a href="index.html">Login</a></div>
             <div id="signup" class="signup-button">
               <button>Sign up</button>
             </div>
