--- a/classrooms.html
+++ b/classrooms.html
@@ -165,7 +165,6 @@
                     </div>
                 </div>
 
-
                 <div class="class">
                     <div class="top-class">
                         <div class="class-title">
@@ -201,7 +200,6 @@
                 </div>
             </div>
 
-            
         </div>
         <!-- Sidebar -->
         <div id="sidebar" class="sidebar hide">
@@ -221,9 +219,7 @@
                     <i class="fa-solid fa-table-list fa-lg"></i>
                     To-do
                 </div>
-                <div class="classes">
-                    
-                </div>
+                <div class="classes"></div>
             </div>
             <div class="bottom-sidebar">
                 <div>
@@ -233,6 +229,30 @@
                 <div>
                     <i class="fa-solid fa-gear fa-lg"></i>
                     Settings
+                </div>
+            </div>
+        </div>
+        <!-- MODAL -->
+        <div class="modal">
+            <div class="modal-header">Create class</div>
+            <div>
+                <input placeholder="Class name (required)" type="text">
+            </div>
+            <div>
+                <input placeholder="Section" type="text">
+            </div>
+            <div>
+                <input placeholder="Subject" type="text">
+            </div>
+            <div>
+                <input placeholder="Room" type="text">
+            </div>
+            <div class="buttons">
+                <div class="cancel-button">
+                    <button>Cancel</button>
+                </div>
+                <div class="create-button">
+                    <button>Create</button>
                 </div>
             </div>
         </div>
