styled the modal in the classrooms page

--- a/classrooms.html
+++ b/classrooms.html
@@ -234,25 +234,29 @@
         </div>
         <!-- MODAL -->
         <div class="modal">
-            <div class="modal-header">Create class</div>
-            <div>
-                <input placeholder="Class name (required)" type="text">
-            </div>
-            <div>
-                <input placeholder="Section" type="text">
-            </div>
-            <div>
-                <input placeholder="Subject" type="text">
-            </div>
-            <div>
-                <input placeholder="Room" type="text">
-            </div>
-            <div class="buttons">
-                <div class="cancel-button">
-                    <button>Cancel</button>
+            <div class="modal-box">
+                <div class="modal-header">Create class</div>
+                <div class="inputs">
+                    <div>
+                        <input id="classname-input" placeholder="Class name (required)" type="text">
+                    </div>
+                    <div>
+                        <input id="section-input" placeholder="Section" type="text">
+                    </div>
+                    <div>
+                        <input id="subject-input" placeholder="Subject" type="text">
+                    </div>
+                    <div>
+                        <input id="room-input" placeholder="Room" type="text">
+                    </div>
                 </div>
-                <div class="create-button">
-                    <button>Create</button>
+                <div class="buttons">
+                    <div class="cancel-button">
+                        <button>Cancel</button>
+                    </div>
+                    <div class="create-button">
+                        <button>Create</button>
+                    </div>
                 </div>
             </div>
         </div>
