implemented the functionality of the modal in js

--- a/classrooms.html
+++ b/classrooms.html
@@ -233,7 +233,7 @@
             </div>
         </div>
         <!-- MODAL -->
-        <div class="modal">
+        <div class="modal hide">
             <div class="modal-box">
                 <div class="modal-header">Create class</div>
                 <div class="inputs">
