--- a/classrooms.html
+++ b/classrooms.html
@@ -292,6 +292,7 @@
         </div>
       </div>
     </div>
+    <script src="front-end/js/axios.min.js"></script>
     <script src="front-end/js/script.js"></script>
     <script>
       pages.loadFor("classrooms");
