request to update values of user

--- a/classrooms.html
+++ b/classrooms.html
@@ -52,7 +52,7 @@
                 </div>
                 <div class="manage-acc-container">
                     <div class="manage-account">
-                        <a href="">Manage your acount</a>
+                        <a href="manage-account.html">Manage your acount</a>
                     </div>
                 </div>
                 
