--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <div>
                         <div class="create-account"><a href="signup.html">Create account</a></div>
                         <div class="next-button">
-                            <button id="login">Log in</button>
+                            <button id="login" ><a href="classrooms.html">Log in</a></button>
                         </div>
                     </div>
                 </div>
