displaying the classes in the classroom page

--- a/classrooms.html
+++ b/classrooms.html
@@ -25,8 +25,14 @@
                 </div>
             </div>
             <div class="right-navbar">
-                <div id="burgerIcon" class="plus-icon">
+                <!-- <div class="plus-icon">
                     <i class="fa-solid fa-plus fa-lg"></i>
+                </div> -->
+                <div class="join-class">
+                    <button >Join class</button>
+                </div>
+                <div class="create-class">
+                    <button>Create class</button>
                 </div>
                 <div class="google-apps-icon">
                     <i class="fa-solid fa-border-none fa-lg"></i>
@@ -62,208 +68,70 @@
                     <p>Calendar</p>
                 </div>
             </div>
-            <div class="bottom-classrooms">
-                <div class="class">
-                    <div class="top-class">
-                        <div class="class-title">
-                            <p>FSW 23&24 | Soft Skils</p>
-                            <div>
-                                <i class="fa-solid fa-ellipsis-vertical fa-lg"></i>
-                            </div>
-                        </div>
-                        <p>Full Stack Web Development Bootcamp</p>
-                        <p>Tech Department</p>
-                        <div class="profile-pic"><img
-                            src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
-                            alt="Profile Picture"></div>
-                    </div>
-                    <div class="assignments">
-                        <div class="assignment">
-                            <p class="due-date">Due today</p>
-                            <p>11:59PM - Professional Development Plan</p>
-                        </div>
-                        <div class="assignment">
-                            <p class="due-date">Due tomorrow</p>
-                            <p>11:59PM - Planners(Time Management)</p>
-                        </div>
-                    </div>
-                    <div class="bottom-class">
-                        <div class="user-icon">
-                            <i class="fa-regular fa-user fa-lg"></i>
-                        </div>
-                        <div class="folder-icon">
-                            <i class="fa-regular fa-folder fa-lg"></i>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="class">
-                    <div class="top-class">
-                        <div class="class-title">
-                            <p>FSW 23&24 | Soft Skils</p>
-                            <div>
-                                <i class="fa-solid fa-ellipsis-vertical fa-lg"></i>
-                            </div>
-                        </div>
-                        <p>Full Stack Web Development Bootcamp</p>
-                        <p>Tech Department</p>
-                        <div class="profile-pic"><img
-                            src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
-                            alt="Profile Picture"></div>
-                    </div>
-                    <div class="assignments">
-                        <div class="assignment">
-                            <p class="due-date">Due today</p>
-                            <p>11:59PM - Professional Development Plan</p>
-                        </div>
-                        <div class="assignment">
-                            <p class="due-date">Due tomorrow</p>
-                            <p>11:59PM - Planners(Time Management)</p>
-                        </div>
-                    </div>
-                    <div class="bottom-class">
-                        <div class="user-icon">
-                            <i class="fa-regular fa-user fa-lg"></i>
-                        </div>
-                        <div class="folder-icon">
-                            <i class="fa-regular fa-folder fa-lg"></i>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="class">
-                    <div class="top-class">
-                        <div class="class-title">
-                            <p>FSW 23&24 | Soft Skils</p>
-                            <div>
-                                <i class="fa-solid fa-ellipsis-vertical fa-lg"></i>
-                            </div>
-                        </div>
-                        <p>Full Stack Web Development Bootcamp</p>
-                        <p>Tech Department</p>
-                        <div class="profile-pic"><img
-                            src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
-                            alt="Profile Picture"></div>
-                    </div>
-                    <div class="assignments">
-                        <div class="assignment">
-                            <p class="due-date">Due today</p>
-                            <p>11:59PM - Professional Development Plan</p>
-                        </div>
-                        <div class="assignment">
-                            <p class="due-date">Due tomorrow</p>
-                            <p>11:59PM - Planners(Time Management)</p>
-                        </div>
-                    </div>
-                    <div class="bottom-class">
-                        <div class="user-icon">
-                            <i class="fa-regular fa-user fa-lg"></i>
-                        </div>
-                        <div class="folder-icon">
-                            <i class="fa-regular fa-folder fa-lg"></i>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="class">
-                    <div class="top-class">
-                        <div class="class-title">
-                            <p>FSW 23&24 | Soft Skils</p>
-                            <div>
-                                <i class="fa-solid fa-ellipsis-vertical fa-lg"></i>
-                            </div>
-                        </div>
-                        <p>Full Stack Web Development Bootcamp</p>
-                        <p>Tech Department</p>
-                        <div class="profile-pic"><img
-                            src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
-                            alt="Profile Picture"></div>
-                    </div>
-                    <div class="assignments">
-                        <!-- <div class="assignment">
-                            <p class="due-date">Due today</p>
-                            <p>11:59PM - Professional Development Plan</p>
-                        </div> -->
-                        <!-- <div class="assignment">
-                            <p class="due-date">Due tomorrow</p>
-                            <p>11:59PM - Planners(Time Management)</p>
-                        </div> -->
-                    </div>
-                    <div class="bottom-class">
-                        <div class="user-icon">
-                            <i class="fa-regular fa-user fa-lg"></i>
-                        </div>
-                        <div class="folder-icon">
-                            <i class="fa-regular fa-folder fa-lg"></i>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-        <!-- Sidebar -->
-        <div id="sidebar" class="sidebar hide">
-            <div class="top-sidebar">
-                <div>
-                    <i class="fa-solid fa-house fa-lg"></i>
-                    Classes
-                </div>
-                <div>
-                    <i class="fa-regular fa-calendar fa-lg"></i>
-                    Calendar
-                </div>
-            </div>
-            <div class="middle-sidebar">
-                <p>Enrolled</p>
-                <div class="to-do">
-                    <i class="fa-solid fa-table-list fa-lg"></i>
-                    To-do
-                </div>
-                <div class="classes"></div>
-            </div>
-            <div class="bottom-sidebar">
-                <div>
-                    <i class="fa-solid fa-folder fa-lg"></i>
-                    Archived classes
-                </div>
-                <div>
-                    <i class="fa-solid fa-gear fa-lg"></i>
-                    Settings
-                </div>
-            </div>
-        </div>
-        <!-- MODAL -->
-        <div class="modal hide">
-            <div class="modal-box">
-                <div class="modal-header">Create class</div>
-                <div class="inputs">
+            <div class="bottom-classrooms"></div>
+            <!-- Sidebar -->
+            <div id="sidebar" class="sidebar hide">
+                <div class="top-sidebar">
                     <div>
-                        <input id="classname-input" placeholder="Class name (required)" type="text">
+                        <i class="fa-solid fa-house fa-lg"></i>
+                        Classes
                     </div>
                     <div>
-                        <input id="section-input" placeholder="Section" type="text">
-                    </div>
-                    <div>
-                        <input id="subject-input" placeholder="Subject" type="text">
-                    </div>
-                    <div>
-                        <input id="room-input" placeholder="Room" type="text">
+                        <i class="fa-regular fa-calendar fa-lg"></i>
+                        Calendar
                     </div>
                 </div>
-                <div class="buttons">
-                    <div class="cancel-button">
-                        <button>Cancel</button>
+                <div class="middle-sidebar">
+                    <p>Enrolled</p>
+                    <div class="to-do">
+                        <i class="fa-solid fa-table-list fa-lg"></i>
+                        To-do
                     </div>
-                    <div class="create-button">
-                        <button>Create</button>
+                    <div class="classes"></div>
+                </div>
+                <div class="bottom-sidebar">
+                    <div>
+                        <i class="fa-solid fa-folder fa-lg"></i>
+                        Archived classes
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-gear fa-lg"></i>
+                        Settings
                     </div>
                 </div>
             </div>
-        </div>
-        <script src="front-end/js/axios.min.js"></script>
-        <script src="front-end/js/script.js"></script>
-        <script>
-            pages.loadFor("classrooms");
-        </script>
-    </body>
-</html>
+            <!-- MODAL -->
+            <div class="modal hide">
+                <div class="modal-box">
+                    <div class="modal-header">Create class</div>
+                    <div class="inputs">
+                        <div>
+                            <input id="classname-input" placeholder="Class name (required)" type="text">
+                        </div>
+                        <div>
+                            <input id="section-input" placeholder="Section" type="text">
+                        </div>
+                        <div>
+                            <input id="subject-input" placeholder="Subject" type="text">
+                        </div>
+                        <div>
+                            <input id="room-input" placeholder="Room" type="text">
+                        </div>
+                    </div>
+                    <div class="buttons">
+                        <div class="cancel-button">
+                            <button>Cancel</button>
+                        </div>
+                        <div class="create-button">
+                            <button>Create</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <script src="front-end/js/axios.min.js"></script>
+            <script src="front-end/js/script.js"></script>
+            <script>
+                pages.loadFor("classrooms");
+            </script>
+        </body>
+    </html>
